--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  go_router: ^14.8.1
 
 dev_dependencies:
   flutter_test:
@@ -52,38 +53,27 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  fonts:
+    - family: Inder
+      fonts:
+        - asset: assets/fonts/Inder-Regular.ttf
+          style: normal
+        - asset: assets/fonts/inria/InriaSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/inria/InriaSans-Regular.ttf
+        - asset: assets/fonts/inria/InriaSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/inria/InriaSans-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/inria/InriaSans-Italic.ttf
+          style: italic
+        - asset: assets/fonts/inria/InriaSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/inria/InriaSans-BoldItalic.ttf
+          weight: 700
+        - asset: assets/fonts/inria/InriaSans-BoldItalic.ttf
+          style: italic
+
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
