--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   go_router: ^14.8.1
   intl: ^0.20.2
 
+  # ------------------
+  http: ^0.13.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
