--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   go_router: ^15.1.1
   intl: ^0.20.2
   http: ^1.3.0
+  table_calendar: ^3.0.9
   shared_preferences: ^2.2.2 # (ou a versão mais nova)
   font_awesome_flutter: ^10.7.0 # Adicionado para ícones como Google e Apple
 
