--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^9.0.0  # ou versão mais recente
+  uuid: ^4.0.0
   cupertino_icons: ^1.0.8
   go_router: ^15.1.1
   intl: ^0.20.2
