--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  share_plus: ^7.2.1
+  url_launcher: ^6.2.6
   flutter_secure_storage: ^9.0.0  # ou versão mais recente
   uuid: ^4.0.0
   cupertino_icons: ^1.0.8
