--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
   share_plus: ^7.2.1
   url_launcher: ^6.2.6
   flutter_secure_storage: ^9.0.0  # ou versão mais recente
